# ghost-rl

./: .gitignore  MC.drawio  MDProcess.drawio  MHA  TD  tdlambda
image-process/bilateral-gaussian/: Guided.pgm  bilateral.pgm  gaussian.pgm  kernel.cpp  kernel.h  main  main.cpp
image-process/binarization-error-diffusion/: 64.pgm  Mandrill-127.ppm  Mandrill-64.ppm  Mandrill-diffuse-1.ppm  Mandrill-diffuse-127.ppm  Mandrill-diffuse-255.ppm  Mandrill-diffuse-64.ppm  Woman-127.pgm  Woman-diffuse-127.pgm  Woman-diffuse-255.pgm  Woman-diffuse-64.pgm  image.h  kernel.cpp  kernel.h  main  main.cpp
image-process/filter-detection/: eh2.pgm  kernel.cpp  kernel.h  laplacian_diag.pgm  main  main.cpp  mean.pgm  sobel_hrz.pgm  sobel_hrz_vrt.pgm  sobel_vrt.pgm  usm.pgm
image-process/geometric-transformation/: Card6.pgm  Card7.pgm  Cards.pgm  image.h  kernel.cpp  kernel.h  main  main.cpp  rotate.pgm  scale.pgm  transform-1.pgm  transform-2.pgm  transform-3.pgm  translate.pgm
image-process/histogram-equalization/: girl-equalize.ppm  kernel.cpp  kernel.h  main  main.cpp  pepper-equalize  pepper-equalize.ppm  simple_plot.py  text-1  text-10  woman-bin-1  woman-bin-10  (+2 more)
rl/: cartpole.mov  dqn.py  es_rl.py  monte_carlo.py  monte_carlo_stock.py  mountrain_ppo.py  neat_config.txt  on_off_policy.py  policy_iteration.py  ppo.py  pyproject.toml  q_learning.py  q_table.npy  q_table_post.npy  reinforce.py  reinforce_post.pkl  sac.py  td.py  value_iteration.py  value_policy_based.py
rl/ac/: ac.py  requirements.txt
rl/images/: MDP.drawio
rl/ppo_nes/: demo_ppo_nes.py  ppo_nes.py
(+13 files in other folders)
